--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
 (function() {
  
     const URL = "https://gowbbmxogydotprcaonz.supabase.co";
-    const KEY = "sb_publishable__ViVgb3sEWhOB_wKKGWEGw_bGauBWNg";
+    const KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imdvd2JibXhvZ3lkb3RwcmNhb256Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjkzODI3NTAsImV4cCI6MjA4NDk1ODc1MH0.-MZnJltABt-6sN4WP9HUp7lw_9mdiMdhpvsAP1Kzmk8";
 
     const supabaseClient = supabase.createClient(URL, KEY);
 
