--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 (function() {
     const CONFIG = {
         URL: "https://gowbbmxogydotprcaonz.supabase.co",
-        KEY: "sb_publishable__ViVgb3sEWhOB_wKKGWEGw_bGauBWNg"
+        KEY: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imdvd2JibXhvZ3lkb3RwcmNhb256Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjkzODI3NTAsImV4cCI6MjA4NDk1ODc1MH0.-MZnJltABt-6sN4WP9HUp7lw_9mdiMdhpvsAP1Kzmk8"
     };
 
     const supabaseClient = supabase.createClient(CONFIG.URL, CONFIG.KEY);
