--- a/index.html
+++ b/index.html
@@ -2,22 +2,117 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Login</title>
-  <link rel="stylesheet" href="style.css">
+  <title>CRUD Supabase</title>
+  <style>
+body {
+  font-family: Arial, sans-serif;
+  max-width: 600px;
+  margin: 40px auto;
+}
+
+form input, form button {
+  padding: 8px;
+  margin: 5px 0;
+  width: 100%;
+}
+
+li {
+  display: flex;
+  justify-content: space-between;
+  margin: 8px 0;
+}
+</style>
 </head>
 <body>
 
-<h2>Login</h2>
+  <h1>CRUD com Supabase</h1>
 
-<form id="login-form">
-  <input type="email" id="email" placeholder="Email" required>
-  <input type="password" id="password" placeholder="Senha" required>
-  <button type="submit">Entrar</button>
-</form>
+  <form id="form">
+    <input type="hidden" id="id">
+    <input type="text" id="nome" placeholder="Nome" required>
+    <input type="email" id="email" placeholder="Email" required>
+    <button type="submit">Salvar</button>
+  </form>
 
-<button id="register">Criar conta</button>
+  <ul id="lista"></ul>
 
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="auth.js"></script>
+<script">
+//CONFIGURAÇÃO DO SUPABASE
+const supabaseUrl = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5kcHZzcG53em9zdnBuaXljYXBjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njk0MjkwNDksImV4cCI6MjA4NTAwNTA0OX0.hYgXJXn3CuvNJkbDyVkJNq6xREV-1OSohB1hhoetibk'
+const supabaseKey = 'SUA-ANON-KEY'
+const supabase = supabase.createClient(supabaseUrl, supabaseKey)
+
+
+//lISTAR
+async function listar() {
+  const { data, error } = await supabase
+    .from('usuarios')
+    .select('*')
+    .order('id', { ascending: false })
+
+  const lista = document.getElementById('lista')
+  lista.innerHTML = ''
+
+  data.forEach(user => {
+    const li = document.createElement('li')
+    li.innerHTML = `
+      ${user.nome} - ${user.email}
+      <div>
+        <button onclick="editar(${user.id}, '${user.nome}', '${user.email}')">Editar</button>
+        <button onclick="deletar(${user.id})">Excluir</button>
+      </div>
+    `
+    lista.appendChild(li)
+  })
+}
+
+listar()
+
+//CRIAR E ATUALIZAR
+document.getElementById('form').addEventListener('submit', async e => {
+  e.preventDefault()
+
+  const id = document.getElementById('id').value
+  const nome = document.getElementById('nome').value
+  const email = document.getElementById('email').value
+
+  if (id) {
+    await supabase
+      .from('usuarios')
+      .update({ nome, email })
+      .eq('id', id)
+  } else {
+    await supabase
+      .from('usuarios')
+      .insert([{ nome, email }])
+  }
+
+  e.target.reset()
+  document.getElementById('id').value = ''
+  listar()
+})
+
+
+// EDITAR
+function editar(id, nome, email) {
+  document.getElementById('id').value = id
+  document.getElementById('nome').value = nome
+  document.getElementById('email').value = email
+}
+
+
+//DELETAR
+async function deletar(id) {
+  await supabase
+    .from('usuarios')
+    .delete()
+    .eq('id', id)
+
+  listar()
+}
+
+
+</script>
 </body>
 </html>
