--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@ a {
   text-decoration: underline;
 }
 </style>
+
+  <link rel="icon" href="data:image/svg+xml,
+<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
+  <text y='.9em' font-size='90'>🔐</text>
+</svg>">
+  
 </head>
 <body>
 
@@ -52,6 +58,8 @@ a {
   <a onclick="mostrarCadastro()">Criar conta</a> |
   <a onclick="resetSenha()">Esqueci minha senha</a>
 </p>
+  
+
 
 <!-- Supabase CDN -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
