--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@ a {
    CONFIGURAÇÃO
 ================================ */
 const dbsupabase = supabase.createClient(
-  'https://SEU-PROJETO.supabase.co',
-  'SUA-ANON-KEY'
+  'https://ndpvspnwzosvpniycapc.supabase.co',
+  'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5kcHZzcG53em9zdnBuaXljYXBjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njk0MjkwNDksImV4cCI6MjA4NTAwNTA0OX0.hYgXJXn3CuvNJkbDyVkJNq6xREV-1OSohB1hhoetibk'
 )
 
 /* ================================
