--- a/entidades.html
+++ b/entidades.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-    <!-- <script src="conexao_supabase.js"></script> -->
+  <script src="conexao_supabase.js"></script>
  
     <style>
         :root {
