--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ body {
     
   
      
-    <a href="bloco_de_notas.html" class="card">
+    <a href="notas.html" class="card">
         <i class="fas fa-sticky-note"></i>
         <h3>Bloco de Notas</h3>
         <p>Anote e organize suas ideias na nuvem.</p>
