--- a/projetos/tapioca/index.html
+++ b/projetos/tapioca/index.html
@@ -29,10 +29,17 @@ body { scroll-behavior:smooth; }
   border-radius:8px;
   border:2px solid var(--marrom-madeira);
 }
-.campo {
-  width:100%; padding:12px;
-  border-radius:8px; border:none;
+
+  .campo {
+  width: 100%; 
+  padding: 12px;
+  border-radius: 8px; 
+  border: none;
+  /* Adicione as linhas abaixo */
+  color: #000; 
+  background-color: #fff;
 }
+  
 .botao {
   background:var(--amarelo-mostarda);
   padding:12px 24px;
@@ -192,6 +199,41 @@ function remover(i){
 
 filtro.onchange = renderMenu;
 busca.oninput = renderMenu;
+
+           document.getElementById("pedido-form").onsubmit = function(e) {
+  e.preventDefault();
+
+  if (carrinho.length === 0) {
+    alert("Seu carrinho está vazio!");
+    return;
+  }
+
+  const nome = document.getElementById("nome").value;
+  const endereco = document.getElementById("endereco").value;
+  const pagto = document.getElementById("formaPagamento").value;
+  
+  // Monta a mensagem
+  let msg = `*Novo Pedido - Tapioca da Maria*\n\n`;
+  msg += `*Cliente:* ${nome}\n`;
+  msg += `*Endereço:* ${endereco}\n`;
+  msg += `*Pagamento:* ${pagto}\n\n`;
+  msg += `*Itens:*\n`;
+  
+  carrinho.forEach(i => {
+    msg += `- ${i.nome} (x${i.qtd}): R$ ${(i.preco * i.qtd).toFixed(2)}\n`;
+  });
+  
+  msg += `\n*Total: R$ ${totalEl.textContent}*`;
+
+  // Codifica para URL e redireciona (substitua pelo seu número)
+  const fone = "5591992420981"; 
+  window.open(`https://wa.me/${fone}?text=${encodeURIComponent(msg)}`, "_blank");
+};
+
+// Tornar as funções globais para o onclick funcionar
+window.mais = mais;
+window.menos = menos;
+window.remover = remover;
 </script>
 
 </body>
