--- a/projetos/erpabp/index.html
+++ b/projetos/erpabp/index.html
@@ -46,7 +46,7 @@
 <div class="relative flex h-screen w-full flex-col overflow-hidden">
 <header class="flex items-center bg-white dark:bg-background-dark p-4 pb-2 justify-between border-b border-gray-100 dark:border-gray-800 sticky top-0 z-10">
 <div class="text-[#111418] dark:text-white flex size-12 shrink-0 items-center justify-start cursor-pointer">
-<span class="material-symbols-outlined">arrow_back_ios</span>
+<!-- <span class="material-symbols-outlined">arrow_back_ios</span> -->
 </div>
 <h2 class="text-[#111418] dark:text-white text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center pr-12">Termos de Uso e Responsabilidade</h2>
 </header>
@@ -102,5 +102,8 @@
 </div>
 </footer>
 </div>
+    <script src="js/index.js"></script>
+</body>
+</html>
 
 </body></html>
