--- a/projetos/erpabp/lista_parcelas.html
+++ b/projetos/erpabp/lista_parcelas.html
@@ -198,27 +198,9 @@
 </button>
 </div>
 </div>
-<nav class="fixed bottom-0 left-0 right-0 bg-white/95 dark:bg-background-dark/95 backdrop-blur-xl border-t border-gray-100 dark:border-gray-800 h-[72px] flex items-center justify-around px-2 z-20 pb-safe">
-<button class="flex flex-col items-center gap-1.5 min-w-[64px] text-gray-500 dark:text-gray-400 active:opacity-60 transition-opacity">
-<span class="material-symbols-outlined text-2xl">logout</span>
-<span class="text-[10px] font-medium">Sair</span>
-</button>
-<button class="flex flex-col items-center gap-1.5 min-w-[64px] text-gray-500 dark:text-gray-400 active:opacity-60 transition-opacity">
-<span class="material-symbols-outlined text-2xl">people</span>
-<span class="text-[10px] font-medium">Entidades</span>
-</button>
-<button class="flex flex-col items-center gap-1.5 min-w-[64px] text-primary">
-<span class="material-symbols-outlined text-2xl" style="font-variation-settings: 'FILL' 1">payments</span>
-<span class="text-[10px] font-semibold">Parcelas</span>
-</button>
-<button class="flex flex-col items-center gap-1.5 min-w-[64px] text-gray-500 dark:text-gray-400 active:opacity-60 transition-opacity">
-<span class="material-symbols-outlined text-2xl">dashboard</span>
-<span class="text-[10px] font-medium">Painel</span>
-</button>
-<button class="flex flex-col items-center gap-1.5 min-w-[64px] text-gray-500 dark:text-gray-400 active:opacity-60 transition-opacity">
-<span class="material-symbols-outlined text-2xl">settings</span>
-<span class="text-[10px] font-medium">Ajustes</span>
-</button>
-</nav>
 
-</body></html>
+        
+
+<script src="navbar.js"></script>
+</body>
+</html>
