--- a/index.html
+++ b/index.html
@@ -1,109 +1,197 @@
 <!DOCTYPE html>
-<html class="light" lang="pt-BR"><head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Termos de Uso e Responsabilidade</title>
-<script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
-<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
-<script id="tailwind-config">
-        tailwind.config = {
-            darkMode: "class",
-            theme: {
-                extend: {
-                    colors: {
-                        "primary": "#137fec",
-                        "background-light": "#f6f7f8",
-                        "background-dark": "#101922",
-                    },
-                    fontFamily: {
-                        "display": ["Inter"]
-                    },
-                    borderRadius: {
-                        "DEFAULT": "0.25rem",
-                        "lg": "0.5rem",
-                        "xl": "0.75rem",
-                        "full": "9999px"
-                    },
-                },
-            },
-        }
-    </script>
-<style type="text/tailwindcss">
-        body {
-            font-family: 'Inter', sans-serif;
-            -webkit-tap-highlight-color: transparent;
-            min-height: max(884px, 100dvh);
-        }
-    </style>
+<html lang="pt-br">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>ARISTIDES DEBUG PRO</title>
+
+<script src="https://cdn.tailwindcss.com"></script>
+
 <style>
-    body {
-      min-height: max(884px, 100dvh);
+    #console-log {
+        font-family: monospace;
+        font-size: 11px;
+        scroll-behavior: smooth;
     }
-  </style>
-  </head>
-<body class="bg-background-light dark:bg-background-dark font-display">
-<div class="relative flex h-screen w-full flex-col overflow-hidden">
-<header class="flex items-center bg-white dark:bg-background-dark p-4 pb-2 justify-between border-b border-gray-100 dark:border-gray-800 sticky top-0 z-10">
-<div class="text-[#111418] dark:text-white flex size-12 shrink-0 items-center justify-start cursor-pointer">
-<!-- <span class="material-symbols-outlined">arrow_back_ios</span> -->
-</div>
-<h2 class="text-[#111418] dark:text-white text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center pr-12">Termos de Uso e Responsabilidade</h2>
+    .log-info {
+        color: #50fa7b;
+        border-left: 4px solid #50fa7b;
+        padding: 6px;
+        margin: 4px 0;
+        word-break: break-word;
+    }
+    .log-error {
+        color: #ff5555;
+        background: rgba(255,0,0,0.08);
+        border-left: 4px solid #ff5555;
+        padding: 6px;
+        margin: 4px 0;
+        word-break: break-word;
+    }
+    .log-system {
+        color: #aaa;
+        font-size: 10px;
+        font-style: italic;
+        margin-top: 8px;
+        border-bottom: 1px solid #333;
+    }
+</style>
+</head>
+
+<body class="bg-gray-900 h-screen flex flex-col overflow-hidden">
+
+<header class="bg-gray-800 p-4 border-b border-gray-700 shadow-lg">
+    <div class="flex flex-col gap-3">
+        <div class="flex justify-between items-center">
+            <h1 class="text-blue-400 font-black italic tracking-tight">
+                ARISTIDES DEBUG PRO
+            </h1>
+            <button onclick="limparConsole()"
+                class="bg-red-900 text-white text-[10px] px-3 py-1 rounded">
+                Limpar
+            </button>
+        </div>
+
+        <label class="flex items-center justify-center w-full h-14 bg-blue-600 rounded-xl cursor-pointer active:bg-blue-700 shadow">
+            <span class="text-white font-bold">📂 CARREGAR HTML</span>
+            <input type="file" accept=".html" hidden onchange="carregarArquivo(this)">
+        </label>
+    </div>
 </header>
-<main class="flex-1 overflow-y-auto bg-white dark:bg-background-dark">
-<div class="max-w-xl mx-auto">
-<div class="px-4">
-<h3 class="text-[#111418] dark:text-white tracking-light text-2xl font-bold leading-tight pb-1 pt-6">Termos de Uso do Aplicativo</h3>
-<p class="text-[#617589] dark:text-gray-400 text-sm font-normal leading-normal pb-6">Atualizado em: 15 de Outubro de 2024</p>
+
+<div class="flex-1 bg-white relative">
+    <iframe id="viewer" class="w-full h-full border-none"></iframe>
 </div>
-<div class="px-4">
-<h3 class="text-[#111418] dark:text-white text-lg font-bold leading-tight tracking-[-0.015em] pb-2 pt-4">1. Aceitação dos Termos</h3>
-<p class="text-[#111418] dark:text-gray-300 text-base font-normal leading-relaxed pb-3 pt-1">
-                        Ao acessar e utilizar este aplicativo, você concorda expressamente com os termos e condições aqui descritos. Se você não concordar com qualquer parte destes termos, não deverá utilizar nossos serviços.
-                    </p>
+
+<div class="h-[45%] bg-[#0a0a0a] flex flex-col border-t-4 border-blue-600">
+    <div class="bg-gray-900 px-3 py-1 flex justify-between items-center">
+        <span class="text-blue-500 text-[10px] font-bold uppercase">
+            Console
+        </span>
+        <span id="file-name" class="text-gray-500 text-[10px] truncate max-w-[150px]">
+            Nenhum arquivo
+        </span>
+    </div>
+
+    <div id="console-log" class="flex-1 overflow-y-auto p-3">
+        <div class="log-info">Pronto para capturar logs e erros…</div>
+    </div>
 </div>
-<div class="px-4">
-<h3 class="text-[#111418] dark:text-white text-lg font-bold leading-tight tracking-[-0.015em] pb-2 pt-4">2. Responsabilidade pelos Dados</h3>
-<p class="text-[#111418] dark:text-gray-300 text-base font-normal leading-relaxed pb-3 pt-1">
-                        Os proprietários e desenvolvedores da aplicação não são responsáveis pelos dados inseridos no sistema. Todas as informações são armazenadas exclusivamente de duas formas:
-                    </p>
-<ul class="list-disc ml-6 space-y-2 pb-4 text-[#111418] dark:text-gray-300 text-base">
-<li><strong>Localmente:</strong> Via IndexedDB no próprio navegador do usuário.</li>
-<li><strong>Conta Própria:</strong> Na conta pessoal do Supabase configurada pelo próprio usuário.</li>
-</ul>
-<p class="text-[#111418] dark:text-gray-300 text-base font-normal leading-relaxed pb-3 pt-1">
-                        Os desenvolvedores não possuem qualquer tipo de acesso a esses ambientes de armazenamento, o que remove totalmente sua capacidade técnica de gerenciar, administrar, recuperar ou excluir tais dados.
-                    </p>
-</div>
-<div class="px-4">
-<h3 class="text-[#111418] dark:text-white text-lg font-bold leading-tight tracking-[-0.015em] pb-2 pt-4">3. Projeto Open-Source</h3>
-<p class="text-[#111418] dark:text-gray-300 text-base font-normal leading-relaxed pb-3 pt-1">
-                        Este sistema é um software de código aberto (open-source), promovendo a transparência e a colaboração. O código-fonte está hospedado e disponível publicamente no GitHub através do repositório: <br/>
-<span class="font-mono text-primary break-all">aristidesbp/projetos/app_financeiro</span>
-</p>
-</div>
-<div class="px-4">
-<h3 class="text-[#111418] dark:text-white text-lg font-bold leading-tight tracking-[-0.015em] pb-2 pt-4">4. Privacidade</h3>
-<p class="text-[#111418] dark:text-gray-300 text-base font-normal leading-relaxed pb-3 pt-1">
-                        Garantimos que a arquitetura do software foi desenhada para priorizar sua privacidade, assegurando que o controle sobre as informações financeiras permaneça inteiramente sob posse do usuário final.
-                    </p>
-</div>
-<div class="h-40 bg-white dark:bg-background-dark"></div>
-</div>
-</main>
-<footer class="bg-white dark:bg-background-dark border-t border-gray-100 dark:border-gray-800 p-4 pb-10 space-y-3 shadow-[0_-4px_6px_-1px_rgba(0,0,0,0.05)]">
-<div class="max-w-xl mx-auto w-full flex flex-col gap-3">
-<button class="w-full h-12 flex items-center justify-center rounded-xl bg-primary text-white font-bold text-base active:opacity-80 transition-opacity">
-                    Aceitar e Continuar
-                </button>
-<button class="w-full h-12 flex items-center justify-center rounded-xl border-2 border-gray-200 dark:border-gray-700 text-[#111418] dark:text-white font-semibold text-base active:bg-gray-50 dark:active:bg-gray-800 transition-colors">
-                    Recusar
-                </button>
-</div>
-</footer>
-</div>
-    <script src="js/index.js"></script>
+
+<script>
+const viewer = document.getElementById('viewer');
+const consoleLog = document.getElementById('console-log');
+const fileName = document.getElementById('file-name');
+
+let currentURL = null;
+
+/* ================================
+   UTILITÁRIOS
+================================ */
+
+function hora() {
+    return new Date().toLocaleTimeString();
+}
+
+function safeStringify(obj) {
+    try {
+        if (typeof obj === 'object') {
+            return JSON.stringify(obj);
+        }
+        return String(obj);
+    } catch {
+        return '[Objeto não serializável]';
+    }
+}
+
+function imprimir(tipo, msg) {
+    const div = document.createElement('div');
+    div.className = 'log-' + tipo;
+    div.innerHTML = `<span>[${hora()}]</span> ${msg}`;
+    consoleLog.appendChild(div);
+    consoleLog.scrollTop = consoleLog.scrollHeight;
+}
+
+function limparConsole() {
+    consoleLog.innerHTML = '<div class="log-info">Console reiniciado.</div>';
+}
+
+/* ================================
+   CARREGAMENTO DO HTML
+================================ */
+
+function carregarArquivo(input) {
+    const file = input.files[0];
+    if (!file) return;
+
+    if (currentURL) URL.revokeObjectURL(currentURL);
+
+    fileName.textContent = file.name;
+    imprimir('system', `Arquivo carregado: ${file.name}`);
+
+    const reader = new FileReader();
+    reader.onload = e => {
+        let html = e.target.result;
+
+        const spy = `
+<script>
+(function () {
+    const originalLog = console.log;
+    const originalError = console.error;
+
+    function send(type, msg) {
+        window.parent.postMessage({ type, msg }, '*');
+    }
+
+    console.log = function () {
+        originalLog.apply(console, arguments);
+        send('info', '📝 ' + Array.from(arguments).map(a => {
+            try { return typeof a === 'object' ? JSON.stringify(a) : a }
+            catch { return '[obj]' }
+        }).join(' '));
+    };
+
+    console.error = function () {
+        originalError.apply(console, arguments);
+        send('error', '❌ ' + Array.from(arguments).join(' '));
+    };
+
+    window.onerror = function (msg, url, line, col) {
+        send('error', '❌ ' + msg + ' | Linha: ' + line + (col ? ' Col: ' + col : ''));
+    };
+
+    window.onunhandledrejection = function (e) {
+        send('error', '⚠️ Promise: ' + e.reason);
+    };
+})();
+<\/script>
+`;
+
+        if (html.includes('<head')) {
+            html = html.replace(/<head[^>]*>/i, m => m + spy);
+        } else {
+            html = spy + html;
+        }
+
+        const blob = new Blob([html], { type: 'text/html' });
+        currentURL = URL.createObjectURL(blob);
+        viewer.src = currentURL;
+    };
+
+    reader.readAsText(file);
+}
+
+/* ================================
+   RECEBIMENTO SEGURO
+================================ */
+
+window.addEventListener('message', event => {
+    if (event.source !== viewer.contentWindow) return;
+    if (!event.data || !event.data.type) return;
+
+    imprimir(event.data.type, event.data.msg);
+});
+</script>
+
 </body>
 </html>
-
-</body></html>
