--- a/cadastrar_banco.html
+++ b/cadastrar_banco.html
@@ -169,30 +169,10 @@
                 </button>
 </div>
 </main>
-<nav class="fixed bottom-0 w-full max-w-[480px] bg-white/95 dark:bg-background-dark/95 backdrop-blur-md border-t border-gray-100 dark:border-gray-800 pb-6 pt-2 ios-tab-shadow">
-<div class="flex justify-around items-center">
-<a class="flex flex-col items-center gap-1 text-gray-400 dark:text-gray-500" href="#">
-<span class="material-symbols-outlined">dashboard</span>
-<span class="text-[10px] font-medium">Painel</span>
-</a>
-<a class="flex flex-col items-center gap-1 text-primary" href="#">
-<span class="material-symbols-outlined">account_balance</span>
-<span class="text-[10px] font-medium">Entidades</span>
-</a>
-<a class="flex flex-col items-center gap-1 text-gray-400 dark:text-gray-500" href="#">
-<span class="material-symbols-outlined">receipt_long</span>
-<span class="text-[10px] font-medium">Parcelas</span>
-</a>
-<a class="flex flex-col items-center gap-1 text-gray-400 dark:text-gray-500" href="#">
-<span class="material-symbols-outlined">settings</span>
-<span class="text-[10px] font-medium">Ajustes</span>
-</a>
-<a class="flex flex-col items-center gap-1 text-gray-400 dark:text-gray-500" href="#">
-<span class="material-symbols-outlined">logout</span>
-<span class="text-[10px] font-medium">Sair</span>
-</a>
-</div>
-</nav>
-</div>
 
-</body></html>
+
+        
+</div>
+<script src="js/navbar.js"></script>
+</body>
+</html>
